@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Rename select to query
+
 0.000010  2025-05-07 06:36:38-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Still felshing out functionality after the rewrite
